2005-12-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/GNUmakefile ($(outdir)/FlexLexer.h):
	($(outdir)/parser.cc): 
	($(outdir)/lexer.cc): Bugfix: depend on config.h.

2005-11-30  Pedro Kröger  <kroeger@pedrokroeger.net>

	* ly/titling-init.ly (tagline): it should be a space between
	"Music engraving by LilyPond" and the version number.

2005-11-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (pad-to-box): new markup command.

	* scm/define-grobs.scm (all-grob-descriptions): set thickness to
	1.0.
	(all-grob-descriptions): don't shift RehearsalMark arbitrarily.

2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* configure.in (LINK_GXX_STATICALLY): remove kpathsea checks.

	* kpath-guile/: remove directory

	* scm/kpathsea.scm (ly:kpathsea-expand-variable): new
	file. Encapsulate kpathsea using commandline tools.

	* lily/all-font-metrics.cc (kpathsea_find_file): use (scm
	kpathsea) module.

2005-11-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Setting automatic
	beam behavior): Correct a few typos. Thanks to David Bobroff.

	* scripts/lilypond-book.py (LATEX_INSPECTION_DOCUMENT): Use
	\usepackage instead of \RequirePackage. Thanks to Bernard Hurley.

2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/*.py: gmane address for bugs.

2005-11-28 Pal Benko <benkop@freestart.hu>
	
	* make/ly-rules.make: add -f switch to mv

	* scm/output-libs.scm: add new bar symbol "." for punctus divisionis

	* lily/bar-line.cc: interpret it

2005-11-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in (--disable-documentation): New switch.

	* GNUmakefile.in: Use it.

	* stepmake/aclocal.m4: Use AC_ARG_ENABLE for kpatsea.

2005-11-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (do_file): search chunks for
	\\begin{document}

	* GNUmakefile.in: add copy step in between so we can lose the
	out-www directories.

2005-11-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
