@@ -1,6 +1,6 @@
 PACKAGE_NAME=LilyPond
 MAJOR_VERSION=2
 MINOR_VERSION=7
-PATCH_LEVEL=20
+PATCH_LEVEL=21
 MY_PATCH_LEVEL=
 
