@@ -1,3 +1,7 @@
+2005-12-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scripts/lilypond-book.py (do_file): fix thinkos.
+
 2005-12-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/GNUmakefile ($(outdir)/FlexLexer.h):
@@ -8,6 +12,10 @@
 
 	* ly/titling-init.ly (tagline): it should be a space between
 	"Music engraving by LilyPond" and the version number.
+
+2005-12-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* VERSION (PACKAGE_NAME): release 2.7.20
 
 2005-11-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
